--- a/css/default.css
+++ b/css/default.css
@@ -18,7 +18,7 @@
   a {
     padding: var(--size-1);
     border-radius: var(--border-radius);
-    font-size: var(--font-size-1);
+    font-size: var(--fluid-font-size-2);
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
