--- a/css/reset.css
+++ b/css/reset.css
@@ -19,7 +19,7 @@
   article:not(:first-of-type),
   footer {
     margin-inline: auto;
-    padding-inline: var(--size-2);
+    padding-inline: var(--website-padding-inline);
     max-inline-size: var(--max-site-width);
   }
 
