--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,9 @@
 @layer default {
 
+  article:not(:first-of-type) {
+    padding-block: var(--size-5);
+  }
+
   h1 {
     font-size: var(--fluid-font-size-4);
     text-align: center;
@@ -7,12 +11,20 @@
 
   h2 {
     font-size: var(--fluid-font-size-2);
+    color: var(--color-0);
   }
 
   p,
   blockquote {
-    font-size: var(--fluid-font-size-2);
     color: var(--color-0)
+  }
+
+  p {
+    font-size: var(--fluid-font-size-2);
+  }
+
+  blockquote {
+    font-size: var(--fluid-font-size-1);
   }
 
   a {
