--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@
 
   .composition {
     position: relative;
-    padding-block: var(--size-5);
     background-image: var(--gradient-1);
 
     & .product-box {
@@ -185,6 +184,55 @@
         flex-basis: 0;
         inline-size: max(20vi, 100px);
       }
+    }
+  }
+
+  .feedback {
+    --swiper-navigation-color: var(--color-0);
+    --swiper-navigation-top-offset: clamp(150px, 24vi, 230px);
+    --swiper-pagination-color: var(--color-0);
+    --swiper-pagination-bullet-size: clamp(15px, 3vi, 20px);
+    background-image: var(--gradient-3);
+
+    & .swiper {
+      padding-block-end: var(--size-4);
+      inline-size: clamp(260px, 80vi, 900px);
+    }
+
+    & .swiper-wrapper {
+      padding-block-end: var(--size-4);
+    }
+
+    & .swiper-slide {
+      block-size: auto !important;
+    }
+
+    & .swiper-slide div {
+      display: block flex;
+      flex-direction: column;
+      align-items: center;
+      gap: var(--size-2);
+      border-radius: var(--border-radius);
+      padding: var(--size-3);
+      block-size: 100%;
+      max-block-size: 100vb;
+      background-color: oklch(from var(--main-color) l c h / .4);
+    }
+
+    & img {
+      border-radius: var(--border-radius);
+      block-size: 40%;
+      object-fit: cover;
+      object-position: top;
+    }
+
+    & blockquote {
+      overflow-y: auto;
+    }
+
+    .swiper-button-next::after,
+    .swiper-button-prev::after {
+      font-weight: 700;
     }
   }
 }
