--- a/css/default.css
+++ b/css/default.css
@@ -18,15 +18,16 @@
 
   p,
   blockquote {
+    font-size: var(--fluid-font-size-1);
     color: var(--color-0)
   }
 
-  p {
+  /* p {
     font-size: var(--fluid-font-size-2);
-  }
+  } */
 
   blockquote {
-    font-size: var(--fluid-font-size-1);
+    font-style: italic;
   }
 
   a,
