--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,10 @@
 
     & .timer {
       grid-area: timer;
+      font-size: var(--fluid-font-size-2);
+      font-weight: 700;
+      text-shadow: 2px 2px 6px var(--color-0);
+      color: var(--main-color);
     }
 
     & .sale {
@@ -385,6 +389,7 @@
         block-size: 4px;
         inline-size: 120%;
         background-color: var(--main-color);
+        opacity: 0.9;
       }
 
       & span:last-of-type {
