--- a/css/base.css
+++ b/css/base.css
@@ -14,6 +14,17 @@
     --color-3: oklch(0% 0 0);
     --main-color: oklch(44.62% 0.104 324.41);
 
+    --max-site-width: 160ch;
+
+    --line-height: calc(1em + 4px);
+
+    --fluid-font-size-1: clamp(1rem, 2vi, 1.5rem);
+    --fluid-font-size-2: clamp(1rem, 2vi, 2rem);
+    --fluid-font-size-3: clamp(2rem, 4vi, 3.5rem);
+    --fluid-font-size-4: clamp(2.5rem, 6vi, 5rem);
+
+    --border-radius: var(--size-2);
+
     --gradient-colors:
       oklch(from var(--main-color) l c h / 0.9) -15%,
       oklch(from var(--color-1) l c h / 0.8);
@@ -30,15 +41,7 @@
         oklch(from var(--main-color) l c h / 0.9) -15%,
         oklch(from var(--main-color) l c h / 0.6));
 
-    --max-site-width: 160ch;
-
-    --line-height: calc(1em + 4px);
-
-    --fluid-font-size-1: clamp(1rem, 2vi, 1.5rem);
-    --fluid-font-size-2: clamp(1rem, 2vi, 2rem);
-    --fluid-font-size-3: clamp(2rem, 4vi, 3.5rem);
-    --fluid-font-size-4: clamp(2.5rem, 6vi, 5rem);
-
-    --border-radius: var(--size-2);
+    --transition-defaults: 0.3s ease-in-out;
+    --shadow: 2px 2px 6px;
   }
 }
