--- a/css/default.css
+++ b/css/default.css
@@ -12,7 +12,7 @@
   .main-title {
     font-size: var(--fluid-font-size-4);
     text-align: center;
-    text-shadow: 2px 2px 6px var(--color-3);
+    text-shadow: var(--shadow) var(--color-3);
   }
 
   h2 {
@@ -40,5 +40,23 @@
     font-weight: 700;
     color: var(--color-1);
     background-color: var(--main-color);
+    transition:
+      color var(--transition-defaults),
+      background-color var(--transition-defaults),
+      filter var(--transition-defaults);
+  }
+
+  a:hover,
+  a:focus,
+  button:hover,
+  button:focus {
+    outline: none;
+    color: var(--main-color);
+    background-color: oklch(from var(--color-1) calc(l - 0.05) c h);
+    filter: drop-shadow(var(--shadow) var(--color-3));
+  }
+
+  img {
+    filter: drop-shadow(var(--shadow) var(--color-0));
   }
 }
