--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@
       border-radius: 50%;
       inline-size: clamp(100px, 10vi, 160px);
       background-image: var(--gradient-2);
-      filter: drop-shadow(2px 2px 6px var(--color-3));
+      filter: drop-shadow(var(--shadow) var(--color-3));
     }
   }
 
@@ -212,12 +212,26 @@
       background-color: oklch(from var(--main-color) l c h / .4);
     }
 
+    .swiper-button-prev,
+    .swiper-button-next,
+    .swiper-pagination-bullet {
+      transition: outline var(--transition-defaults);
+    }
+
+    .swiper-button-prev:focus-visible,
+    .swiper-button-next:focus-visible,
+    .swiper-pagination-bullet:focus-visible {
+      outline-offset: 10px;
+      outline-color: var(--color-1);
+    }
+
     & img {
       flex-shrink: 0;
       border-radius: var(--border-radius);
       block-size: 40%;
       object-fit: cover;
       object-position: top;
+      filter: drop-shadow(var(--shadow) var(--color-3));
     }
 
     & blockquote {
@@ -362,7 +376,7 @@
       grid-area: timer;
       font-size: var(--fluid-font-size-2);
       font-weight: 700;
-      text-shadow: 2px 2px 6px var(--color-0);
+      text-shadow: var(--shadow) var(--color-0);
       color: var(--main-color);
     }
 
@@ -376,7 +390,7 @@
       align-items: center;
       gap: var(--size-2);
       font-weight: 700;
-      text-shadow: 2px 2px 6px var(--color-3);
+      text-shadow: var(--shadow) var(--color-3);
 
       & span:first-of-type {
         position: relative;
